--- a/SandboxForTesting/Whoosh/gui.ui
+++ b/SandboxForTesting/Whoosh/gui.ui
@@ -17,9 +17,9 @@
    <widget class="QLabel" name="welcomeLabel">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>40</y>
-      <width>251</width>
+      <x>455</x>
+      <y>60</y>
+      <width>91</width>
       <height>51</height>
      </rect>
     </property>
@@ -30,19 +30,33 @@
    <widget class="QTextEdit" name="userQuery">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>130</y>
-      <width>341</width>
+      <x>220</x>
+      <y>150</y>
+      <width>471</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTextEdit{
+border: 2px solid;
+border-radius:10px;
+background-color: palette(base);
+}</string>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>90</y>
-      <width>261</width>
+      <x>394</x>
+      <y>110</y>
+      <width>211</width>
       <height>21</height>
      </rect>
     </property>
@@ -56,21 +70,45 @@
       <x>220</x>
       <y>200</y>
       <width>561</width>
-      <height>481</height>
+      <height>531</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTextEdit{
+border: 2px solid;
+background-color: palette(base);
+border-radius: 20px;
+}</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>130</y>
-      <width>96</width>
+      <x>700</x>
+      <y>150</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+border: 2px solid;
+border-radius: 10px;
+border-style: outset;
+}</string>
+    </property>
     <property name="text">
-     <string>Cerca</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>images/search.jpg</normaloff>images/search.jpg</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>20</width>
+      <height>20</height>
+     </size>
     </property>
    </widget>
   </widget>
