--- a/SandboxForTesting/Whoosh/gui.ui
+++ b/SandboxForTesting/Whoosh/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1124</width>
-    <height>891</height>
+    <width>1125</width>
+    <height>892</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,11 +17,19 @@
    <widget class="QLabel" name="welcomeLabel">
     <property name="geometry">
      <rect>
-      <x>455</x>
-      <y>60</y>
-      <width>91</width>
+      <x>50</x>
+      <y>30</y>
+      <width>131</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>AvantGarde LT Medium</family>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
     </property>
     <property name="text">
      <string>Benvenuto! </string>
@@ -30,8 +38,8 @@
    <widget class="QTextEdit" name="userQuery">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>150</y>
+      <x>50</x>
+      <y>130</y>
       <width>471</width>
       <height>31</height>
      </rect>
@@ -54,11 +62,17 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>394</x>
-      <y>110</y>
-      <width>211</width>
-      <height>21</height>
+      <x>50</x>
+      <y>80</y>
+      <width>311</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>AvantGarde LT Medium</family>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Inserisci la query qui sotto:</string>
@@ -67,8 +81,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QTextEdit" name="resultsText">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>200</y>
+      <x>50</x>
+      <y>180</y>
       <width>561</width>
       <height>531</height>
      </rect>
@@ -81,11 +95,11 @@ border-radius: 20px;
 }</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="searchButton">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>150</y>
+      <x>530</x>
+      <y>130</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -117,7 +131,7 @@ border-style: outset;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1124</width>
+     <width>1125</width>
      <height>23</height>
     </rect>
    </property>
