--- a/SandboxForTesting/Whoosh/gui.ui
+++ b/SandboxForTesting/Whoosh/gui.ui
@@ -78,23 +78,6 @@ p, li { white-space: pre-wrap; }
      <string>Inserisci la query qui sotto:</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="resultsText">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>180</y>
-      <width>561</width>
-      <height>531</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QTextEdit{
-border: 2px solid;
-background-color: palette(base);
-border-radius: 20px;
-}</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="searchButton">
     <property name="geometry">
      <rect>
@@ -171,19 +154,6 @@ QComboBox QAbstractItemView {
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>770</x>
-      <y>320</y>
-      <width>74</width>
-      <height>18</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
@@ -201,6 +171,23 @@ QComboBox QAbstractItemView {
     </property>
     <property name="text">
      <string>Scegli un genere:</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>210</y>
+      <width>561</width>
+      <height>541</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTextBrowser{
+border: 2px solid;
+background-color: palette(base);
+border-radius: 20px;
+}</string>
     </property>
    </widget>
   </widget>
