--- a/SandboxForTesting/Whoosh/gui.ui
+++ b/SandboxForTesting/Whoosh/gui.ui
@@ -111,8 +111,8 @@ border-style: outset;
    <widget class="QComboBox" name="genreList">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>130</y>
+      <x>950</x>
+      <y>42</y>
       <width>191</width>
       <height>30</height>
      </rect>
@@ -157,8 +157,8 @@ QComboBox QAbstractItemView {
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>80</y>
+      <x>730</x>
+      <y>40</y>
       <width>201</width>
       <height>31</height>
      </rect>
@@ -188,6 +188,42 @@ border: 2px solid;
 background-color: palette(base);
 border-radius: 20px;
 }</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="querySyntax">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>210</y>
+      <width>471</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTextEdit{
+border: 2px solid;
+background-color: palette(base);
+border-radius: 20px;
+}</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>170</y>
+      <width>201</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>AvantGarde LT Medium</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Inserisci query:</string>
     </property>
    </widget>
   </widget>
