--- a/SandboxForTesting/Whoosh/gui.ui
+++ b/SandboxForTesting/Whoosh/gui.ui
@@ -99,7 +99,7 @@ border-style: outset;
     </property>
     <property name="icon">
      <iconset>
-      <normaloff>images/search.jpg</normaloff>images/search.jpg</iconset>
+      <normaloff>../../../../../.designer/backup/images/search.jpg</normaloff>../../../../../.designer/backup/images/search.jpg</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -178,7 +178,7 @@ QComboBox QAbstractItemView {
      <rect>
       <x>50</x>
       <y>210</y>
-      <width>561</width>
+      <width>681</width>
       <height>541</height>
      </rect>
     </property>
@@ -193,10 +193,10 @@ border-radius: 20px;
    <widget class="QTextEdit" name="querySyntax">
     <property name="geometry">
      <rect>
-      <x>680</x>
+      <x>760</x>
       <y>210</y>
-      <width>471</width>
-      <height>181</height>
+      <width>391</width>
+      <height>281</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -210,7 +210,7 @@ border-radius: 20px;
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>820</x>
+      <x>860</x>
       <y>170</y>
       <width>201</width>
       <height>31</height>
